--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,31 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+.country-list{
+  list-style: none;
+  padding: 0;
+}
+.bold{
+  font-size: 24px;
+  font-weight: 600;
+}
+.country-title{
+  display: flex;
+  align-items: center;
+}
+.country-name{
+  font-size: 38px;
+  font-weight: 700;
+  
+  margin: 0;
+  margin-left: 20px;
+}
+.item-name{
+  font-size: 20px;
+  font-weight: 500;
+  margin-left: 20px;
+}
+.country-info p{
+  font-size: 20px;
+  font-weight: 400;
+}
